--- a/install
+++ b/install
@@ -1,6 +1,6 @@
 #!/usr/bin/env sh
 
-URL="https://github.com/kriszyp/cpm/tarball/v0.1.3"
+URL="https://github.com/kriszyp/cpm/tarball/v0.1.4"
 BIN="/usr/local/bin"
 LIB="/usr/local/lib"
 
@@ -9,7 +9,7 @@ mkdir "/tmp/cpm"
 
 cd "/tmp/cpm"
 
-curl -L $URL > cpm.tar.gz
+curl -kL $URL > cpm.tar.gz
 
 gunzip cpm.tar.gz
 tar -xf cpm.tar
